Hardcoded text colors do not work well in dark mode
Version: 3.34.1 (by Flathub.org)
GTK-Theme: Adwaita Dark
Gnome 3.32 does not allow to force dark mode for every app and i could not find a switch in the settings of the app. Therefore i am using Adwaita Dark. But when a message is GPG signed i noticed that the text is black on black.
All the other text above the E-Mail Body is displaying fine (white on black).
Edited by Milan Crha