I#659 - Hardcoded text colors do not work well in dark mode

Closes https://gitlab.gnome.org/GNOME/evolution/issues/659